--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -74,3 +74,12 @@
   year = {2015},
   note = {accessed 2018-11-12},
 }
+
+@Misc{api-design,
+  author = {Jasmin Blanchette},
+  title = {The Little Manual of API Design},
+  institution = {Trolltech},
+  howpublished = {\url{https://people.mpi-inf.mpg.de/~jblanche/api-design.pdf}},
+  year = {2008},
+  note = {accessed 2018-11-20},
+}
